2011-06-27  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.6.2.
	* DEV-PHASE: Set to prerelease.

2011-06-27  Release Manager

	* GCC 4.6.1 released.

2011-06-21  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (rs6000_cannot_force_const_mem): New func.
	(TARGET_CANNOT_FORCE_CONST_MEM): Update definition.

2011-06-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	Backport from mainline.
        2011-06-13  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	PR target/48454
	* config/arm/neon.md (vec_pack_trunc): Set the lengths
	correctly for the case with Quad vectors.

2011-06-20  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (create_TOC_reference): Wrap high part
	of toc-relative address in CONST.
	(rs6000_delegitimize_address): Recognize changed address.
	(rs6000_legitimize_reload_address): Likewise.
	(rs6000_emit_move): Don't force these constants to memory.
	* config/rs6000/rs6000.md (tls_gd, tls_gd_high): Wrap high part of
	toc-relative address in CONST.
	(tls_ld, tls_ld_high, tls_got_dtprel, tls_got_dtprel_high): Likewise.
	(tls_got_tprel, tls_got_tprel_high, largetoc_high): Likewise.

2011-06-18  Jakub Jelinek  <jakub@redhat.com>

	PR target/49411
	* config/i386/i386.c (ix86_expand_multi_arg_builtins): If
	last_arg_constant and last argument doesn't match its predicate,
	for xop_vpermil2<mode>3 error out and for xop_rotl<mode>3
	if it is CONST_INT, mask it, otherwise expand using rotl<mode>3.
	(ix86_expand_sse_pcmpestr, ix86_expand_sse_pcmpistr): Fix
	spelling of error message.
	* config/i386/sse.md (sse4a_extrqi, sse4a_insertqi,
	vcvtps2ph, *vcvtps2ph, *vcvtps2ph_store, vcvtps2ph256): Use
	const_0_to_255_operand instead of const_int_operand.

2011-06-17  Richard Henderson  <rth@redhat.com>

	Backport from mainline
	2011-03-22  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (dwarf2out_frame_debug_expr) [rule 11]: Handle post_dec.

2011-06-17  Richard Guenther  <rguenther@suse.de>
